@@ -59,6 +59,8 @@ t/pod_parser.t
 t/ppm.t
 t/runthrough.t
 t/signature.t
+t/test_type.t
+t/test_types.t
 t/tilde.t
 t/versions.t
 t/xs.t
